cambios en horarios y en perfil

--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -110,7 +110,9 @@
             </div>
         </div>
     </div>
-    <div class="btn btn-success foot" style="height: 20px;"></div>
+    <!-- Espacio y botón verde -->
+    <div class="mb-3"></div>
+    <button class="btn btn-success foot" style="height: 40px;" onclick="generarHorario()">Generar Horario</button>
 </div>
 
 <!-- Script para inicializar el DataTable y realizar la búsqueda -->
