--- a/templates/dashboard/perfil.html
+++ b/templates/dashboard/perfil.html
@@ -53,16 +53,15 @@
         </div>
       </div>
       <div class="col-md-6 d-flex align-items-stretch">
-        <div class="card mb-4 w-100">
-          <div class="card-body d-flex justify-content-center">
-            <img
-              alt="Foto de perfil"
-              class="card-img-top rounded-circle"
-              src="{{ url_for('static', filename='/img/CHAFLOQUE_VELASQUEZ_JEANCARLOS.jpg') }}"
-              style="width: 250px; height: 250px; object-fit: cover;"
-            />
-          </div>
-          <div class="card-body text-center">
+        <div class="card mb-4 w-100 d-flex flex-column">
+          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+            <div class="profile-img-wrapper mb-3">
+              <img
+                alt="Foto de perfil"
+                class="profile-img rounded-circle"
+                src="{{ url_for('static', filename='/img/CHAFLOQUE_VELASQUEZ_JEANCARLOS.jpg') }}"
+              />
+            </div>
             <h5 class="card-title">Nombre de usuario</h5>
             <p class="card-text">Información de perfil</p>
           </div>
@@ -84,7 +83,29 @@
       }, 2000);
     });
   </script>
+
+  <style>
+    .profile-img-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 250px;
+      height: 250px;
+      border: 4px solid #000; /* Borde más grueso */
+      border-radius: 50%; /* Mantener el borde redondeado */
+      overflow: hidden; /* Recortar cualquier desbordamiento de la imagen */
+    }
+
+    .profile-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* Asegura que la imagen mantenga su proporción */
+    }
+  </style>
 {% endblock %}
+
+
+
 
 
 
