--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -217,7 +217,7 @@
 									<span id="usernamenav" class="text-dark">{{usuario}}</span>
 								</a>
 								<div class="dropdown-menu dropdown-menu-end">
-									<a class="dropdown-item" href="usuario.html"><i class="align-middle me-1"
+									<a class="dropdown-item" href="{{url_for('perfil')}}"><i class="align-middle me-1"
 											data-feather="user"></i> Perfil</a>
 									<div class="dropdown-divider"></div>
 									<a class="dropdown-item" id="btnCerrarSesion" onclick="cerrarSesion()">Cerrar Sesión</a>
