colores rojo en ambientes, cursos y horarios

--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -12,7 +12,7 @@
     <div id="mensajeResultado" style="display: none;"></div>
 
     <div class="card">
-        <div class="card-header bg-primary text-white">
+        <div class="card-header bg-red-usat text-white">
             Cursos
         </div>
         <div class="card-body">
