--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -79,16 +79,16 @@
                     <div class="row mt-3">
                         <div class="col-md-12" id="espacio_tabla">
                             <table class="table table-bordered text-center" id="tabla_inicial">
-                                <thead class="border border-warning bg-red-usat -horario-usat">
+                                <thead class="border border-white bg-red-usat -horario-usat">
                                   <tr>
-                                    <th scope="col" class="border border-warning text-light">Hora</th>
-                                    <th scope="col" class="border border-warning text-light">Lunes</th>
-                                    <th scope="col" class="border border-warning text-light">Martes</th>
-                                    <th scope="col" class="border border-warning text-light">Miércoles</th>
-                                    <th scope="col" class="border border-warning text-light">Jueves</th>
-                                    <th scope="col" class="border border-warning text-light">Viernes</th>
-                                    <th scope="col" class="border border-warning text-light">Sábado</th>
-                                    <th scope="col" class="border border-warning text-light">Domingo</th>
+                                    <th scope="col" class="border border-white text-light">Hora</th>
+                                    <th scope="col" class="border border-white text-light">Lunes</th>
+                                    <th scope="col" class="border border-white text-light">Martes</th>
+                                    <th scope="col" class="border border-white text-light">Miércoles</th>
+                                    <th scope="col" class="border border-white text-light">Jueves</th>
+                                    <th scope="col" class="border border-white text-light">Viernes</th>
+                                    <th scope="col" class="border border-white text-light">Sábado</th>
+                                    <th scope="col" class="border border-white text-light">Domingo</th>
                                   </tr>
                                 </thead>
                                 <tbody style="background-color: #EEEEEE;">
