--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -77,7 +77,7 @@
 			<nav id="sidebar" class="sidebar js-sidebar">
 				<div class="sidebar-content js-simplebar">
 
-					<a class="sidebar-brand" href="{{url_for('index')}}">
+					<a class="sidebar-brand" href="{{url_for('perfil')}}">
 						<img src="{{ url_for('static', filename='login/images/usat_logo_blank.png') }}"
 							alt="logoescuela" style="max-width: 110px; display: flex;">
 					</a>
