--- a/templates/dashboard/Reporte.html
+++ b/templates/dashboard/Reporte.html
@@ -10,7 +10,7 @@
 
 <style>
     .texto-label {
-        color: #70767F;
+        color:white;
         text-transform: uppercase;
         font-weight: bold;
     }
@@ -44,8 +44,13 @@
         background-color: #1e3799; /* Example color, adjust as necessary */
     }
 
-    .bg-red-usat {
-        background-color: #e55039; /* Example color, adjust as necessary */
+    .bg-red-usat{
+        background-color: #E33439;
+        color: white;
+    }
+
+    .card-title {
+        color: white; /* Agregado para hacer el texto dentro de los cards blanco */
     }
 </style>
 
@@ -135,4 +140,5 @@
     });
 </script>
 {% endblock %}
+
 
